<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="19dp"
                android:fontFamily="@font/roboto"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:hint="@string/task_search"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_name" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/task_status_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_bar"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/show_all"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    app:checkedIcon="@drawable/baseline_check_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/show_created"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:layout_height="wrap_content"
                    android:text="@string/status_created"
                    app:checkedIcon="@drawable/baseline_check_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/show_in_progress"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:layout_height="wrap_content"
                    android:text="@string/status_in_progress"
                    app:checkedIcon="@drawable/baseline_check_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/show_done"
                    android:textSize="10sp"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status_complete"
                    app:checkedIcon="@drawable/baseline_check_24" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <ImageButton
                android:id="@+id/filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/filter"
                app:layout_constraintBottom_toBottomOf="@+id/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/app_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:id="@+id/emptyDiary"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="220dp"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/avatar"
            app:shapeAppearanceOverlay="@style/CircularImageViewStyle" />

        <TextView
            android:layout_marginVertical="41dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="20sp"
            android:text="@string/tasks_not_found" />

        <Button
            android:id="@+id/create_button"
            android:paddingVertical="14sp"
            android:paddingHorizontal="12dp"
            android:backgroundTint="#FFD56B"
            android:text="@string/task_create"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewDiary"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="7"
            tools:listitem="@layout/fragment_diary"/>

        <ImageButton
            android:id="@+id/view_create_button"
            android:background="@drawable/rounded_button"
            android:src="@drawable/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="42dp"
            android:layout_width="69dp"
            android:layout_height="69dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
